Fix : vertical align for upload button

--- a/ui.web/plugins/org.activitymgr.ui.web.view/VAADIN/themes/activitymgr/styles.css
+++ b/ui.web/plugins/org.activitymgr.ui.web.view/VAADIN/themes/activitymgr/styles.css
@@ -28,3 +28,6 @@
 	text-align: center;
 }
 
+.gwt-FileUpload {
+	vertical-align: top;
+}
